--- a/styles.css
+++ b/styles.css
@@ -64,6 +64,7 @@ main {
   flex-grow: 1;
   padding: 2rem;
   max-width: 960px;
+  background-color: #D7C4A3;
 }
 
 h1, h2 {
@@ -76,7 +77,7 @@ section {
 
 /* Footer */
 footer {
-  background-color: #D7C4A3;
+  background-color: #FFFFFF;
   color: #000;
   text-align: center;
   padding: 1rem;
