--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,6 @@
 body {
   margin: 0;
   font-family: 'Segoe UI', sans-serif;
-  background-color: #F0E8DC;
   color: #000000;
 }
 
@@ -10,6 +9,8 @@ body {
   display: flex;
   flex-direction: row;
   min-height: 100vh;
+  width: 100%;
+  background-color: #FDF8F3;
 }
 
 header {
