--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,6 @@ h1, h2, h3 {
   flex-direction: row;
   min-height: 100vh;
   width: 100%;
-  background-color: transparent;
 }
 
 header {
@@ -71,6 +70,7 @@ main {
   padding: 2rem;
   max-width: 960px;
   background-color: #D7C4A3;
+  margin: 0 auto;
 }
 
 h1, h2 {
