--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,11 @@ nav img.logo {
   margin-bottom: 1rem;
 }
 
+.logo-large {
+  height: 48px;
+  margin-right: 1rem;
+}
+
 nav a {
   color: white;
   text-decoration: none;
