--- a/styles.css
+++ b/styles.css
@@ -75,8 +75,11 @@ nav a:hover {
 main {
   flex-grow: 1;
   padding: 2rem;
-  max-width: 960px;
   background-color: #D7C4A3;
+}
+
+.content-wrapper {
+  max-width: 960px;
   margin: 0 auto;
 }
 
