--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,7 @@ nav img.logo {
 
 .logo-large {
   height: 128px;
+  max-width: 100%;
   margin-right: 1rem;
 }
 
@@ -81,6 +82,14 @@ main {
   flex-grow: 1;
   padding: 2rem;
   background-color: #D7C4A3; /* Footer background tone */
+}
+
+.content-wrapper {
+  max-width: 960px;
+  margin: 0 auto;
+  width: 100%;
+  padding: 0 1rem;
+  box-sizing: border-box;
 }
 
 .main-content-area {
@@ -181,18 +190,20 @@ footer {
 
   .main-content-area {
     flex-direction: column;
+	padding: 1rem;
   }
 
-  .main-text-content {
-    width: 100%;
-  }
+  .main-text-content,
+.cta-panel {
+  width: 100%;
+  max-width: 100%;
+  box-sizing: border-box;
+}
 
   .cta-panel {
-    width: 100%;
-    margin-top: 2rem;
-    padding: 1rem;
-    box-sizing: border-box;
-  }
+  margin-top: 2rem;
+  padding: 1rem;
+}
 
   main {
     padding: 1rem;
