--- a/styles.css
+++ b/styles.css
@@ -165,6 +165,12 @@ footer {
     width: 100%;
     height: auto;
   }
+  
+  .logo-large {
+    height: 64px;
+	max-width: 100%;
+	margin-right: 1rem;
+  }
 
   .hamburger {
     display: block;
